<resources>
    <string name="app_name">DartsCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Настройки</string>
    <string name="tv501">501</string>
    <string name="tv00">00</string>
    <string name="current_leg">Подход "№ </string>
    <string name="current_dart">Дарт "№ </string>
    <string name="tv_remaining">Осталось</string>
    <string name="tv_sumscores">Очки</string>
    <string name="ad_out_msg">Очки</string>
    <string name="ad_out_title">Варианты закрытия</string>
    <string name="train_classic">501</string>
    <string name="train_301">301</string>
    <string name="train_170">170</string>
    <string name="fast_round">Быстрый раунд</string>
    <string name="biground">Большой раунд</string>
    <string name="sector20">Сектор 20</string>
    <string name="getscores">Набор Очков</string>
    <string name="americancriket">Американский крикет</string>
    <string name="stats">Статистика</string>
    <string name="settings_button">Войти</string>
    <string name="user_guide">Инструкция</string>
    <string name="sync">Синхронизировать</string>
    <string name="hint_name">Имя</string>
    <string name="hint_phone">Телефон</string>
    <string name="tb_erase">-</string>
    <string name="tb_confirm">O</string>
    <string name="menu_rule">Правила игры</string>
    <string name="menu_giveup">Сдаться</string>
    <string name="menu_save_to_disk">Сохранить результаты</string>
    <string name="menu_newgame">Новая игра</string>
    <string name="menu_hand_mode">Выбор руки</string>
    <string name="menu_left_hand">Слабая</string>
    <string name="menu_right_hand">Ведущая</string>
    <string name="menu_sex">Выбрать пол</string>
    <string name="menu_sex_male">Мужской</string>
    <string name="menu_sex_female">Женский</string>
    <string name="menu_dropbox_link">Указать Dropbox аккаунт</string>
    <string name="tb0">0</string>
    <string name="tb1">1</string>
    <string name="tb2">2</string>
    <string name="tb3">3</string>
    <string name="tb4">4</string>
    <string name="tb5">5</string>
    <string name="tb6">6</string>
    <string name="tb7">7</string>
    <string name="tb8">8</string>
    <string name="tb9">9</string>
    <string name="ac15">15</string>
    <string name="ac16">16</string>
    <string name="ac17">17</string>
    <string name="ac18">18</string>
    <string name="ac19">19</string>
    <string name="ac20">20</string>
    <string name="acB">B</string>
    <string name="player">Игрок</string>
    <string name="guide">В приложении Darts Calc вы можете вести учет результатов своей тренировки. В главном меню можно войти (ввести имя и телефон) с целью упростить поиск вашей информации на сервере. Дальше можно запускать один из режимов тренировки. Здесь мы можем набирать очки, вводя только положенное количество очков в каждом из бросков. По завершению игры появится диалоговое окно с информацией о тренировке и результаты будут сохранены на телефон локально в sdcard/DartsCalcData/режим_игры и на указанный dropbox аккаунт. Чтобы указать аккаунт, нужно раскрыть меню в правом верхнем углу и ввести данные аккаунта. Для Воронежской федерации дартса:\ndartscalc@gmail.com\nvoronezhdarts\nВ меню также есть кнопки "правила игры" и "сдаться досрочно". При досрочной сдачи результаты также сохраняются. Можно выбрать и "новую игру" - тогда результаты сгорят. Кроме того есть возможность выбрть пол и руку.\n---------\nПодсказки\n---------\n- В режимах игры 501, если нажать на цифру с результатом, появится диалоговое окно с подсказкой о том, как можно закрыться. Чтобы убрать диалоговое окно нужно просто нажать в любое место экрана, кроме самого окна. \n- Результаты сохраняются на сервер сразу же при наличии интернета. Если же интернета нет, они сохранятся на сервер автоматически тогда, когда он появится.\n- Формат файла с результатами: 1 2 3 (броски) сумма очки_игры номер подхода рука пол (1 - ведущая, мужской, 0 - слабая, женский). Последней строкой записано среднее арифметическое каждого из столбцов. </string>
    <string name="login_msg">Введите имя и телефон, который будет отображаться на сервере со статистикой. Это никак не влияет на игру и только лишь упрощает задачу тренеру</string>
    <string name="rule_501">Это самая распространённая игра в дартс. В эту игру можно играть как команда на команду, так и один на один. При игре вдвоем часто играют в «501» или в «301». Также для тренировки окончаний можно играть в «101» или «170» (170 - это максимальное количество очков, которое списывается тремя дротиками, т.е. за один подход). Командами чаще играют «701» или «1001». 
Цель игры: по очереди игроки кидают по 3 дротика, списывая набранные очки. Выигрывает тот, кто первый дойдёт до 0. 
Правило подсчёта очков: Считаются попадания во все сектора, также сектора удвоения и утроения (при попадании в сектор утроения очки сектора умножаем на 3). Очки, набранные за 1 подход (3 дротика), суммируются и вычитаются из суммы очков после предыдущего подхода. 
Правило окончания: последний бросок должен попасть в удвоение соответствующего сектора (например, если осталось 40 очков, то нужно попасть в удвоение сектора «20», а если осталось 32 очка, то нужно попасть в удвоение сектора «16»). Начинающие обычно играют без этого правила. По договорённости игроков можно заканчивать чётным сектором или любым сектором. 
Правило перебора: Если игрок при последнем подходе набрал больше очков, чем нужно, то этот подход не засчитывается. Например, если у игрока осталось 7 очков, а он попал в сектор «16», то при следующем подходе этот игрок опять начинает с 7 очков.</string>
    <string name="rule_bigRound">	Ввод очков на каждый бросок лега. Должен быть кратен сектору и меньше тройной его суммы. \n
    Хорошая игра для разминки. Можно играть одному или с соперником. 
Цель игры: набрать как можно больше очков, кидая по три дротика поочерёдно в каждый сектор с «1» до «20» и центр. 
Правило подсчёта очков: Количество попаданий в сектор умножается на номер этого сектора. Например, если, кидая в сектор 2, попали один раз в утроение и один раз в сектор, то очки, набранные на этом секторе: (3+1)*2= 8. Очки, набранные на каждом из секторов, суммируются, и выводится конечный результат.</string>
</resources>