<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/classic_train501"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:background="#000000"
            android:text="@string/train_classic"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/biground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/biground"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/americancriket"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/americancriket"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/fast_round"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/fast_round"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/train_301"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/train_301"
            android:textColor="#ffffff" />
        
        <Button
            android:id="@+id/train_170"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/train_170"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/user_guide"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/user_guide"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/settings_buttuon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/settings_button"
            android:textColor="#ffffff" />

        <com.google.ads.AdView
            android:id="@+id/adView_menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="a151a4b6f761f67"
            ads:loadAdOnCreate="true" >
        </com.google.ads.AdView>
    </LinearLayout>

</RelativeLayout>